--- a/templates/plantilla2.html
+++ b/templates/plantilla2.html
@@ -47,7 +47,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Configuración</a></li>
-            <li class="active"><a href="#">Salir</a></li>
+            <li class="active"><a href="{% url 'logout' %}">Salir</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
