--- a/templates/footer-prof.html
+++ b/templates/footer-prof.html
@@ -7,7 +7,7 @@
 					<div class="col-md-6 text-right dm">
 						<ul id="downMenu">
 							<li class="active"><a href="{% url 'inicio-profesor' %}">Inicio</a></li>
-							<li><a href="{% url '#' %}">Modulos</a></li>
+							<li><a href="#">Modulos</a></li>
 							<li><a href="#">Registro Estudiantes</a></li>
 							<li><a href="#">Lorem</a></li>
                             <li class="last"><a href="#">Configuración</a></li>
