--- a/templates/plantilla-prof.html
+++ b/templates/plantilla-prof.html
@@ -32,10 +32,10 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">MODULOS <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url '#1' %}">Modulo1</a></li>
-                <li><a href="{% url '#' %}">Modulo2</a></li>
-                  <li><a href="{% url '#' %}">Modulo3</a></li>
-                  <li><a href="{% url '#' %}">Modulo4</a></li>
+                <li><a href="#">Modulo1</a></li>
+                <li><a href="#">Modulo2</a></li>
+                  <li><a href="#">Modulo3</a></li>
+                  <li><a href="#">Modulo4</a></li>
 
               </ul>
             </li>
