--- a/templates/registro-estudiante.html
+++ b/templates/registro-estudiante.html
@@ -3,11 +3,29 @@
 
 {%  block content %}
 
- <div class="container initial">
-    <ol class="breadcrumb">
-        <li class="active" >Registro de nuevo estudiante</li>
+  <div id="page-wrapper">
 
-    </ol>
+            <div class="container-fluid">
+
+                <!-- Page Heading -->
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1 class="page-header">
+                            Registro <small> Nuevo Estudiante</small>
+                        </h1>
+                        <ol class="breadcrumb">
+                            <li>
+                                <i class="fa fa-fw fa-edit"> </i> Registro Estudiantes
+                            </li>
+                        </ol>
+                    </div>
+                </div>
+
+
+                <div class="row">
+
+                <div class="container initial">
+
     {% if error %}
     <div class="alert alert-danger"> {{ error }} </div>
 
@@ -33,25 +51,37 @@
 
             <div class="form-group">
               <h4>
-                <label for="exampleInputEmail1">Email address</label>
+                <label for="exampleInputapellidos">Correo</label>
+                <input type = "text" name="apellidos" class="form-control" id="exampleInputapellidos" placeholder="Correo"></h4>
+            </div>
+
+            <div class="form-group">
+              <h4>
+                <label for="exampleInputapellidos">Documento Identidad</label>
+                <input type = "text" name="apellidos" class="form-control" id="exampleInputapellidos" placeholder="Documento"></h4>
+            </div>
+
+            <div class="form-group">
+              <h4>
+                <label for="exampleInputEmail1">Usuario</label>
                 <input type="email" name = "email" class="form-control" id="exampleInputEmail1" placeholder="Email"></h4>
             </div>
 
             <div class="form-group">
               <h4>
-                <label for="exampleInputPassword1">Password</label>
+                <label for="exampleInputPassword1">Contraseña</label>
                 <input type="password"  name = "password1" class="form-control" id="exampleInputPassword1" placeholder="Password"></h4>
             </div>
 
             <div class="form-group">
               <h4>
-                <label for="exampleInputPassword2">Confirmar Password</label>
+                <label for="exampleInputPassword2">Confirmar Contraseña</label>
                 <input type="password" name='password2' class="form-control" id="exampleInputPassword2" placeholder="Password"></h4>
             </div>
 
             <div>
               <p>
-                <button type="submit" class="btn btn-primary btn-lg pull-right">Registrarse</button>
+                <button type="submit" class="btn btn-primary btn-lg pull-right">Registrar Estudiante</button>
               </p>
             </div>
           </div>
@@ -62,5 +92,16 @@
 
 
   </div>
+
+                </div>
+
+
+            </div>
+            <!-- /.container-fluid -->
+
+        </div>
+        <!-- /#page-wrapper -->
+
+    </div>
 
 {% endblock %}
