--- a/templates/footer-prof.html
+++ b/templates/footer-prof.html
@@ -11,6 +11,7 @@
 							<li><a href="#">Registro Estudiantes</a></li>
 							<li><a href="#">Lorem</a></li>
                             <li class="last"><a href="#">Configuración</a></li>
+                        </ul>
 		</div><!-- container -->
 	</div><!-- Footer -->
-
+</div>
