--- a/templates/plantilla-prof.html
+++ b/templates/plantilla-prof.html
@@ -9,16 +9,10 @@
 
     <title>{% block title %} {% endblock %}</title>
 
-    <link href="static/vendors/bootstrap-3.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="static/css/sb-admin.css" rel="stylesheet">
-
-    <!-- Morris Charts CSS -->
-    <link href="static/css/plugins/morris.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../static/vendors/bootstrap-3.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/sb-admin.css" rel="stylesheet">
+    <link href="../static/css/plugins/morris.css" rel="stylesheet">
+    <link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -145,15 +139,15 @@
 {% include 'footer-prof.html' %}
 
 <!-- jQuery -->
-    <script src="static/js/jquery.js"></script>
+    <script src="../static/javascript/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="static/js/bootstrap.min.js"></script>
+    <script src="../static/javascript/bootstrap.min.js"></script>
 
     <!-- Morris Charts JavaScript -->
-    <script src="static/js/plugins/morris/raphael.min.js"></script>
-    <script src="static/js/plugins/morris/morris.min.js"></script>
-    <script src="static/js/plugins/morris/morris-data.js"></script>
+    <script src="../static/javascript/plugins/morris/raphael.min.js"></script>
+    <script src="../static/javascript/plugins/morris/morris.min.js"></script>
+    <script src="../static/javascript/plugins/morris/morris-data.js"></script>
 
 </body>
 
