--- a/templates/registro-estudiante.html
+++ b/templates/registro-estudiante.html
@@ -21,6 +21,27 @@
                     </div>
                 </div>
 
+            <div class="col-sm-12 col-md-12">
+             <div class="col-sm-3 col-md-3 pull-left">
+            <form class="navbar-form" role="search" method="get">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search" name="q">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <div class="row placeholders">
+            <div class="placeholder">
+           {% for estudiant in estudiante %}
+                <h4 >{{ estudiant.nombre }}</h4>
+                <h4>{{ estudiant.apellido }}</h4>
+            {% endfor %}
+            </div>
+            </div>
+       </div>
 
                 <div class="row">
 
