--- a/templates/modulo1-unidad1 -tm1.html
+++ b/templates/modulo1-unidad1 -tm1.html
@@ -7,7 +7,7 @@
     <ol class="breadcrumb">
   <li>Modulo 1</li>
         <li><a href="modulo1-unidad1.html">Unidad 1</a></li>
-        <li class="active">Personal Pronouns</li>
+        <li class="active">Lesson 1</li>
         
         <div class="col-sm-3 col-md-3 pull-right">
             <form class="navbar-form" role="search">
@@ -26,49 +26,51 @@
               
   <div class="col-sm-9 col-md-9">
       <div id="bgf">
-      <h2>Personal Pronouns </h2>
-              <h3>Los pronombres personales</h3> 
+      <h2>Questions and answers</h2>
+              <h3>Grammar</h3>
       </div>
       <br />
-      <p>Dentro de los pronombres personales, el inglés distingue entre pronombres en función de sujeto y pronombres personales en función de objeto.</p>
-     
+      <p>Dn.<div class="centered"><img src="static/img/modulo1/unity1/lesson 1 - grammar.PNG" class="img-responsive" width="506" height="1176" alt=""/></div></p>
+
       <br />
-      <div class="col-md-6">
+      <div class="col-sm-8 col-md-8">
       <table class="table table-bordered">
     <thead>
       <tr>
-        <th>Pronombres en Función de Sujetos</th>
-        <th>Ejemplo</th>
+        <th>Useful Vocabulary</th>
+        <th> </th>
       </tr>
     </thead>
     <tbody>
       <tr>
-          <td><b>I</b> <p>yo</p></td>
-        <td><b>I am ill.</b> <p>Yo estoy enfermo.</p></td>
+          <td><b>Good Morning</b> <p></p></td>
+        <td>We say <b>"Good Morning"</b> <p>from when we wake up until 12 pm.</p></td>
       </tr>
       <tr>
-        <td><b>You</b> <p>tú, usted</p></td>
-        <td><b>You are tall.</b> <p>Tú eres alto. / Usted es alto.</p></td>
+        <td><b>Good Afternoon</b> <p></p></td>
+        <td>We say <b>"Good afternoon"</b><p>after 12 pm until about 6 pm.</p></td>
       </tr>
         <tr>
-        <td><b>He</b> <p>él</p></td>
-        <td><b>He is handsome.</b> <p>Él es guapo.</p></td>
+        <td><b>Good Evening</b> <p></p></td>
+        <td>We say <b>"Good evening"</b> <p>after 6 pm until we leave or go to bed.</p></td>
+      </tr>
+      	<tr>
+        <td><b>Good Night</b> <p></p></td>
+        <td>We say <b>"Good Night"</b> <p>when we leave a place late at night or go to bed.</p></td>
       </tr>
     </tbody>
   </table>
       </div>
 
-<div class="col-md-11">      
-      <p>Nota: En inglés no existe la forma “usted” o “ustedes” formal. Por lo tanto los nativos de la lengua ni siquiera lo tienen conceptualizado como una forma aquí llamada “formal”. Se tiene que entender por tanto, que la forma masculina, femenina y neutra son lo mismo, lo único que las diferencia es el género. 
-
-Además, ten en cuenta que en inglés sólo existe una forma para “tu” y “vosotros”, “you”, excepto en la forma reflexiva que distingue entre el singular (yourself) y plural (yourselves).</p>
+<div class="col-md-11">
+      .
       </div>
-              
+
     <div class="col-md-12">
-      <h2>Neuter Form </h2>
-      <h3>(Forma neutra)</h3> 
+      <h2>Focus on Language</h2>
+      <h3></h3>
   <hr>
-      
+
         <p>Los pronombres en inglés distinguen entre masculino (he), femenino (she) y neutro (it).</p>
 
 <p>El pronombre personal “it” se utiliza cuando nos referimos a cosas, a animales que no sabemos su sexo o al tiempo (calendario y meteorológico). La forma plural de “it” es “they”.</p>
@@ -78,15 +80,15 @@ Además, ten en cuenta que en inglés sólo existe una forma para “tu” y “
  	<li>Where is it [the book]? (¿Dónde está [el libro]?)</li>
  	<li>What time is it? (¿Qué hora es?)</li>
  	<li>It is raining. (Está lloviendo.)</li>
-     
+
       <br />
 
-<div class="col-md-11">      
+<div class="col-md-11">
       <p>Nota: “It” es una partícula muy importante en inglés de la que los hablantes de lengua española se suelen olvidar.</p>
       </div>
     </div>
-              
-</div><!--div-->              
+
+</div><!--div-->
 </div>
           </div>
 </div>
