--- a/templates/modulo1-unidad1.html
+++ b/templates/modulo1-unidad1.html
@@ -25,39 +25,58 @@
 
   <div class="col-sm-9">
       <div id="bgf">
-      <h2>Nivel Básico: Unidad 1 </h2>
-              <h3>Pronouns</h3> 
+      <h2>Module Your World: Unit 1 </h2>
+              <h3>This is Me</h3>
           </div>
-      
-  <div class="col-md-6 col-lg-6">   
       <br />
-      <ol><strong>Contenido:</strong>
-      <li><a href="">Personal Pronouns (Los pronombres personales)</a></li>
-          <li><a href="">Possessive Pronouns (Los pronombres posesivos)</a></li>
-      <li><a href="">Demonstrative Pronouns (Los pronombres demostrativos)</a></li>
-      <li><a href="">Reflexive Pronouns (Los pronombres reflexivos)</a></li>
-      </ol>
-  </div>
-              
-    <div class="col-md-6 col-lg-6">   
       <br />
-      <ol><strong>Actividades:</strong>
-      <li><a href="">Personal Pronouns (Los pronombres personales)</a></li>
-          <li><a href="">Possessive Pronouns (Los pronombres posesivos)</a></li>
-      <li><a href="">Demonstrative Pronouns (Los pronombres demostrativos)</a></li>
-      <li><a href="">Reflexive Pronouns (Los pronombres reflexivos)</a></li>
-      </ol>
-  </div>
-              
-    <div class="col-md-6 col-lg-6">   
-      <br />
-      <ol><strong>Test:</strong>
-      <li><a href="">Personal Pronouns (Los pronombres personales)</a></li>
-          <li><a href="">Possessive Pronouns (Los pronombres posesivos)</a></li>
-      <li><a href="">Demonstrative Pronouns (Los pronombres demostrativos)</a></li>
-      <li><a href="">Reflexive Pronouns (Los pronombres reflexivos)</a></li>
-      </ol>
-  </div>
+    <div class="col-sm-12">
+            <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>Lesson</th>
+        <th> </th>
+        <th> </th>
+        <th> </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+          <td><b>Lesson 1</b> <p></p></td>
+
+          <td><p>Greetings</p></td>
+
+        <td><p>Questions / Answers for greetings </p></td>
+
+          <td><p><b>Speaking:</b> practising meeting people</p>
+              <p><b>Writing:</b> a short dialogue</p></td>
+
+      </tr>
+      <tr>
+        <td><b>Lesson 2</b> <p></p></td>
+          <td><p>Alphabet</p>
+              <p>Numbers 1–20</p>
+              <p>Personal information</p></td>
+
+        <td><p>to be: affirmative (full and contracted forms) </p></td>
+
+        <td><p><b>Speaking:</b> exchanging personal information</p>
+              <p><b>Writing:</b> a paragraph about you, your friends and your school</p></td>
+      </tr>
+
+        <tr>
+            <td><b>Lesson 3</b> <p></p></td>
+              <td><p>Countries and nationalities</p>
+                  <p>Colours</p></td>
+
+            <td><p>to be: negative (full and contracted forms) </p></td>
+
+            <td><p><b>Speaking / Writing:</b> giving factual information about other people</p></td>
+
+          </tr>
+    </tbody>
+  </table>
+        </div>
       
 </div>
               
