--- a/templates/modulo1.html
+++ b/templates/modulo1.html
@@ -27,80 +27,139 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
-				<h1>INGLES<b> BÁSICO</b></h1>
-				<h2>De forma sencilla</h2>
+				<h1>MODULE<b> ONE</b></h1>
+				<h2>Your Wold!</h2>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
 	</div><!-- headerwrap -->
         
-      <div id="wh">
-          <div class="image-reposive centered"><img src="img/corchete.png"/></div>
+       <div id="wh">
+          <div class="centered"><img src="../static/img/corchete.png" class="image-reposive"/></div>
         <div class="row">
-  <div class="col-md-12 col-lg-12">
+        <div class="col-md-8 col-lg-8">
       <br />
-      <p><font size="+2">El curso básico de inglés, está diseñado para los que están empezando. Al finalizar el curso, el estudiante tendrá una comprensión de los conceptos básicos de inglés y será capaz de formar construcciones y oraciones simples. </font></p>
-      <hr />
+      <img src="../static/img/modulo1/module1.PNG" class="img-responsive" alt=""/>
+            </div>
+      <div class="col-md-4 col-lg-4">
+          <br />
+              <font size="+1"><p>In this module you will ...</p>
+        <li> learn how to greet people and practise saying the alphabet, numbers,
+         colours and nationalities in<br />
+        <strong>Unit 1 This is me! </strong></li>
+        <li> describe your family and different types of family relationships in<br />
+        <strong>Unit 2 My family</strong> </li>
+        <li> talk about school and learn how to describe people physically in<br />
+        <strong>Unit 3 School life and people</strong> </li></font>
+          </div>
+
+      <div class="col-md-12 col-lg-12"> <hr />
+      <div class="centered"><strong><font size="+2" color="#164A9A">Unit 1 This is me!</font> </strong></div>
   </div>
+
   <div class="col-md-4 col-lg-4">
-      <div class="image-reposive centered"><img src="img/blue-circle.png"/></div>
+
       <br />
-      <ol><strong>Unidad 1:</strong>
-      <li>Personal Pronouns (Los pronombres personales)</li>
-      <li>Possessive Pronouns (Los pronombres posesivos)</li>
-      <li>Demonstrative Pronouns (Los pronombres demostrativos)</li>
-      <li>Reflexive Pronouns (Los pronombres reflexivos)</li>
+      <ol><strong>Lesson 1:</strong>
+      <li><strong>Grammar</strong>: Questions and answers</li>
+      <li><strong>Vocabulary:</strong> Greetings </li>
+      <li><strong>Listenning: </strong> Introductions and greetings Words beginning with ‘h</li>
+      <li><strong>Reading: </strong> Dialogues aboutmeeting someone</li>
+      <li><strong>Speaking: </strong> Roleplaying meeting someone</li>
+      <li><strong>Writing: </strong> A short dialogue using greetings</li>
       </ol>
   </div>
     <div class="col-md-4 col-lg-4">
-        <div class="image-reposive centered"><img src="img/blue-circle.png"/></div>
+
       <br />
-      <ol><strong>Unidad 2:</strong>
-      <li>Personal Pronouns (Los pronombres personales)</li>
-      <li>Possessive Pronouns (Los pronombres posesivos)</li>
-      <li>Demonstrative Pronouns (Los pronombres demostrativos)</li>
-      <li>Reflexive Pronouns (Los pronombres reflexivos)</li>
+      <ol><strong>Lesson 2:</strong>
+      <li><strong>Grammar:</strong> Full and contractedforms of to be: affirmative</li>
+      <li><strong>Vocabulary:</strong> The alphabet Numbers 0-20 </li>
+      <li><strong>Listenning: </strong> Students giving their personal information /iː/ /e/ /eɪ/ /uː/ /ɑː/ /ɑɪ/</li>
+      <li><strong>Reading: </strong> Email to a penfriend</li>
+      <li><strong>Speaking: </strong> Discussing personal information</li>
+      <li><strong>Writing: </strong> A paragraph about you</li>
       </ol>
   </div>
     <div class="col-md-4 col-lg-4">
-        <div class="image-reposive centered"><img src="img/blue-circle.png"/></div>
+
       <br />
-      <ol><strong>Unidad 3:</strong>
-      <li>Personal Pronouns (Los pronombres personales)</li>
-      <li>Possessive Pronouns (Los pronombres posesivos)</li>
-      <li>Demonstrative Pronouns (Los pronombres demostrativos)</li>
-      <li>Reflexive Pronouns (Los pronombres reflexivos)</li>
+      <ol><strong>Lesson 3:</strong>
+      <li><strong>Grammar:</strong> Full and contractedforms of to be: negative </li>
+      <li><strong>Vocabulary:</strong> Countries and nationalities Colours </li>
+      <li><strong>Listenning: </strong> Discussing nationalities</li>
+      <li><strong>Reading: </strong> Students introducing themselves on a forum</li>
+      <li><strong>Speaking: </strong> Talking about you and your best friend</li>
+      <li><strong>Writing: </strong> A text about your bestfriend </li>
       </ol>
   </div>
-            <div class="col-md-12"> <hr /> </div>
+            <div class="col-md-12"> <hr />
+            <div class="centered"><strong><font size="+2" color="#2D69E1">Unit 2 My family</font> </strong></div>
+            </div>
      <div class="col-md-4 col-lg-4">
-         <div class="image-reposive centered"><img src="img/blue-circle.png"/></div>
+
       <br />
-      <ol><strong>Unidad 4:</strong>
-      <li>Personal Pronouns (Los pronombres personales)</li>
-      <li>Possessive Pronouns (Los pronombres posesivos)</li>
-      <li>Demonstrative Pronouns (Los pronombres demostrativos)</li>
-      <li>Reflexive Pronouns (Los pronombres reflexivos)</li>
-      </ol>
-  </div>
-     <div class="col-md-4 col-lg-4">
-         <div class="image-reposive centered"><img src="img/blue-circle.png"/></div>
-      <br />
-      <ol><strong>Unidad 5:</strong>
-      <li>Personal Pronouns (Los pronombres personales)</li>
-      <li>Possessive Pronouns (Los pronombres posesivos)</li>
-      <li>Demonstrative Pronouns (Los pronombres demostrativos)</li>
-      <li>Reflexive Pronouns (Los pronombres reflexivos)</li>
+      <ol><strong>Lesson 4:</strong>
+      <li><strong>Grammar:</strong> Possessive adjectives</li>
+      <li><strong>Vocabulary:</strong> Family members Numbers 20-100 </li>
+      <li><strong>Listenning: </strong> Identifying numbers Stress on numbers</li>
+      <li><strong>Reading: </strong> Description of pictures</li>
+      <li><strong>Speaking: </strong> Discussing a family in a picture</li>
+      <li><strong>Writing: </strong> An email about your family </li>
       </ol>
   </div>
      <div class="col-md-4 col-lg-4">
-         <div class="image-reposive centered"><img src="img/blue-circle.png"/></div>
+
       <br />
-      <ol><strong>Unidad 6:</strong>
-      <li>Personal Pronouns (Los pronombres personales)</li>
-      <li>Possessive Pronouns (Los pronombres posesivos)</li>
-      <li>Demonstrative Pronouns (Los pronombres demostrativos)</li>
-      <li>Reflexive Pronouns (Los pronombres reflexivos)</li>
+      <ol><strong>Lesson 5:</strong>
+      <li><strong>Grammar:</strong> Possessive ’s </li>
+      <li><strong>Vocabulary:</strong> Personality adjectives </li>
+      <li><strong>Listenning: </strong> People talking about their families Possessive ’s</li>
+      <li><strong>Reading: </strong> Describing a family tree</li>
+      <li><strong>Speaking: </strong> Interviewing a friend</li>
+      <li><strong>Writing: </strong> A paragraph about your family</li>
+      </ol>
+  </div>
+     <div class="col-md-4 col-lg-4">
+
+      <br />
+      <ol><strong>Lesson 6:</strong>
+     <li><strong>Grammar:</strong> to be: questions </li>
+      <li><strong>Vocabulary:</strong> Jobs </li>
+      <li><strong>Listenning: </strong> Information to complete a form Intonation in questions</li>
+      <li><strong>Reading: </strong> An email describing a family photo</li>
+      <li><strong>Speaking: </strong> Asking questions to identify a famous Colombian</li>
+      <li><strong>Writing: </strong> A text about a famous person</li>
+      </ol>
+  </div>
+
+  <div class="col-md-12"> <hr />
+  <div class="centered"><strong><font size="+2" color="#3AA9DF">Unit 3 School life and people</font> </strong></div>
+  </div>
+     <div class="col-md-4 col-lg-4">
+
+      <br />
+      <ol><strong>Lesson 7:</strong>
+      <li><strong>Grammar:</strong> a and an this/these and that/those</li>
+      <li><strong>Vocabulary:</strong> Sports, subjects andclassroom objects Days of the week </li>
+      <li><strong>Listenning: </strong> Discussing schoolsubjects
+</li>
+      <li><strong>Reading: </strong>Reading a jumbled letter</li>
+      <li><strong>Speaking: </strong> Describing a classroom</li>
+      <li><strong>Writing: </strong> A letter</li>
+      </ol>
+  </div>
+     <div class="col-md-4 col-lg-4">
+
+      <br />
+      <ol><strong>Lesson 8:</strong>
+      <li><strong>Grammar:</strong> Wh- questionswith to be </li>
+      <li><strong>Vocabulary:</strong> Adjectives describing physical appearance</li>
+      <li><strong>Listenning: </strong> Discussing physical characteristics
+Intonation in questions</li>
+      <li><strong>Reading: </strong> Descriptions of people</li>
+      <li><strong>Speaking: </strong> Describing a famous person</li>
+      <li><strong>Writing: </strong> A job interview dialogue</li>
       </ol>
   </div>
 </div>
