--- a/templates/plantilla3.html
+++ b/templates/plantilla3.html
@@ -16,54 +16,105 @@
           <span class="visible-xs navbar-brand">Sidebar menu</span>
         </div>
         <div class="navbar-collapse collapse sidebar-navbar-collapse">
-           <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pronouns <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 1 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo1-unidad1-tm1' %}">Personal Pronouns</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                <li><a href="{% url 'modulo1-unidad1-tm1' %}">Questions and answers</a></li>
+                <li><a href="#">Greetins</a></li>
+                <li><a href="#">Introductions and greetings Words beginning with ‘h</a></li>
+                <li><a href="#">Dialogues aboutmeeting someone</a></li>
+                <li><a href="#">Roleplaying meeting someone</a></li>
+                <li><a href="#">A short dialogue using greetings</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                   <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">The Articles<b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 2<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                <li><a href="#">Full and contractedforms of to be: affirmative</a></li>
+                <li><a href="#">The alphabet Numbers 0-20 </a></li>
+                <li><a href="#">Students giving their personal information /iː/ /e/ /eɪ/ /uː/ /ɑː/ /ɑɪ/</a></li>
+                <li><a href="#">Email to a penfriend</a></li>
+                <li><a href="#">Discussing personal information</a></li>
+                <li><a href="#"> A paragraph about you</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                   <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Prepositions <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 3 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                <li><a href="#">Full and contractedforms of to be: negative </a></li>
+                <li><a href="#">Countries and nationalities Colours </a></li>
+                <li><a href="#">Discussing nationalities/</a></li>
+                <li><a href="#">Students introducing themselves on a forum</a></li>
+                <li><a href="#">Talking about you and your best friend</a></li>
+                <li><a href="#"> A text about your bestfriend </a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                   <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Nouns <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 4 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                <li><a href="#">Possessive adjectives </a></li>
+                <li><a href="#">Family members Numbers 20-100 </a></li>
+                <li><a href="#">Identifying numbers Stress on numbers</a></li>
+                <li><a href="#">Description of pictures</a></li>
+                <li><a href="#">Discussing a family in a picture</a></li>
+                <li><a href="#"> An email about your family </a></li>
                 <li class="divider"></li>
                   </ul></li>
 
               <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Verbs <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 5 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                <li><a href="#">Possessive ’s </a></li>
+      			<li><a href="#">Personality adjectives </a></li>
+      			<li><a href="#">People talking about their families Possessive ’s</a></li>
+      			<li><a href="#">Describing a family tree</a></li>
+      			<li><a href="#">Interviewing a friend</a></li>
+      			<li><a href="#">A paragraph about your family</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
-            <li><a href="#">Menu Item 4</a></li>
-            <li><a href="#">Reviews <span class="badge">1,118</span></a></li>
+               <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 6 <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">to be: questions </a></li>
+      			<li><a href="#">Jobs </a></li>
+      			<li><a href="#">Information to complete a form Intonation in questions</a></li>
+      			<li><a href="#">An email describing a family photo</a></li>
+      			<li><a href="#">Asking questions to identify a famous Colombian</a></li>
+      			<li><a href="#">A text about a famous person</a></li>
+                <li class="divider"></li>
+                  </ul></li>
+
+              <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 7 <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">a and an this/these and that/those</a></li>
+      			<li><a href="#">Sports, subjects andclassroom objects Days of the week</a></li>
+      			<li><a href="#">Discussing schoolsubjects</a></li>
+      			<li><a href="#">Reading a jumbled letter</a></li>
+     			<li><a href="#">Describing a classroom</a></li>
+      			<li><a href="#">A letter</a></li>
+                <li class="divider"></li>
+                  </ul></li>
+
+               <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 8 <b class="caret"></b></a>
+               <ul class="dropdown-menu">
+                <li><a href="#">Wh- questionswith to be </a></li>
+      			<li><a href="#">Adjectives describing physical appearance</a></li>
+     			<li><a href="#">Discussing physical characteristics Intonation in questions</a></li>
+     			<li><a href="#">Descriptions of people</a></li>
+      			<li><a href="#">Describing a famous person</a></li>
+      			<li><a href="#">A job interview dialogue</a></li>
+                <li class="divider"></li>
+                  </ul></li>
+
+            <li><a href="#">let’s work together <span class="badge">A family collage</span></a></li>
+            <li><a href="#">Self-assessment</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
