--- a/templates/plantilla-prof.html
+++ b/templates/plantilla-prof.html
@@ -9,7 +9,7 @@
 
     <title>{% block title %} {% endblock %}</title>
 
-    <link href="../static/vendors/bootstrap-3.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/sb-admin.css" rel="stylesheet">
     <link href="../static/css/plugins/morris.css" rel="stylesheet">
     <link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -90,7 +90,7 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li class="active">
-                        <a href="{% url 'inicio-profesore' %}" ><i class="fa fa-fw fa-dashboard"></i> Inicio</a>
+                        <a href="{% url 'inicio-profesor' %}" ><i class="fa fa-fw fa-dashboard"></i> Inicio</a>
                     </li>
                     <li>
                         <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-table"></i> Módulos <i class="fa fa-fw fa-caret-down"></i></a>
@@ -126,14 +126,14 @@
             </div>
             <!-- /.navbar-collapse -->
         </nav>
+
+    <div>
+
+        {% block content %}
+
+        {% endblock %}
+
     </div>
-
-<div>
-
-    {% block content %}
-
-    {% endblock %}
-
 </div>
 
 {% include 'footer-prof.html' %}
