--- a/templates/modulo1-unidad1 -tm1.html
+++ b/templates/modulo1-unidad1 -tm1.html
@@ -1,5 +1,5 @@
 {% extends 'plantilla2.html' %}
-{% block title %} Tema 1 {% endblock %}
+{% block title %} Tema 2 {% endblock %}
 
 {%  block content %}
 
@@ -25,12 +25,11 @@
         {% include 'plantilla3.html' %}
               
   <div class="col-sm-9 col-md-9">
-      <div id="bgf">
-      <h2>Questions and answers</h2>
-              <h3>Grammar</h3>
-      </div>
-      <br />
-      <p>Dn.<div class="centered"><img src="static/img/modulo1/unity1/lesson 1 - grammar.PNG" class="img-responsive" width="506" height="1176" alt=""/></div></p>
+        <h2>FOCUS ON VOCABULARY</h2>
+      <h3></h3>
+        <hr>
+      <p>Copy the clocks in your notebook and write the correct greeting from the Useful vocabulary box.</p>
+      <div class="centered"><img src="static/img/modulo1/unity1/lesson 1 - grammar.PNG" class="img-responsive" alt=""/></div>
 
       <br />
       <div class="col-sm-8 col-md-8">
@@ -71,22 +70,8 @@
       <h3></h3>
   <hr>
 
-        <p>Los pronombres en inglés distinguen entre masculino (he), femenino (she) y neutro (it).</p>
-
-<p>El pronombre personal “it” se utiliza cuando nos referimos a cosas, a animales que no sabemos su sexo o al tiempo (calendario y meteorológico). La forma plural de “it” es “they”.</p>
-
-        <p>Ejemplos:</p>
-
- 	<li>Where is it [the book]? (¿Dónde está [el libro]?)</li>
- 	<li>What time is it? (¿Qué hora es?)</li>
- 	<li>It is raining. (Está lloviendo.)</li>
-
       <br />
 
-<div class="col-md-11">
-      <p>Nota: “It” es una partícula muy importante en inglés de la que los hablantes de lengua española se suelen olvidar.</p>
-      </div>
-    </div>
 
 </div><!--div-->
 </div>
