--- a/templates/plantilla3.html
+++ b/templates/plantilla3.html
@@ -20,24 +20,20 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 1 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo1-unidad1-tm1' %}">Questions and answers</a></li>
-                <li><a href="#">Greetins</a></li>
-                <li><a href="#">Introductions and greetings Words beginning with ‘h</a></li>
-                <li><a href="#">Dialogues aboutmeeting someone</a></li>
-                <li><a href="#">Roleplaying meeting someone</a></li>
-                <li><a href="#">A short dialogue using greetings</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson1-tm2' %}">Read</a></li>
+                <li><a href="{% url 'modulo1-unidad1-tm1' %}">Vocabulary</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson1-tm3' %}">Listen</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson1-tm4' %}">Speak</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                   <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 2<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Full and contractedforms of to be: affirmative</a></li>
-                <li><a href="#">The alphabet Numbers 0-20 </a></li>
-                <li><a href="#">Students giving their personal information /iː/ /e/ /eɪ/ /uː/ /ɑː/ /ɑɪ/</a></li>
-                <li><a href="#">Email to a penfriend</a></li>
-                <li><a href="#">Discussing personal information</a></li>
-                <li><a href="#"> A paragraph about you</a></li>
+                <li><a href="#">...</a></li>
+                <li><a href="#">...</a></li>
+                <li><a href="#">...</a></li>
+                <li><a href="#">...</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
@@ -48,8 +44,6 @@
                 <li><a href="#">Countries and nationalities Colours </a></li>
                 <li><a href="#">Discussing nationalities/</a></li>
                 <li><a href="#">Students introducing themselves on a forum</a></li>
-                <li><a href="#">Talking about you and your best friend</a></li>
-                <li><a href="#"> A text about your bestfriend </a></li>
                 <li class="divider"></li>
                   </ul></li>
 
@@ -60,8 +54,6 @@
                 <li><a href="#">Family members Numbers 20-100 </a></li>
                 <li><a href="#">Identifying numbers Stress on numbers</a></li>
                 <li><a href="#">Description of pictures</a></li>
-                <li><a href="#">Discussing a family in a picture</a></li>
-                <li><a href="#"> An email about your family </a></li>
                 <li class="divider"></li>
                   </ul></li>
 
@@ -72,8 +64,6 @@
       			<li><a href="#">Personality adjectives </a></li>
       			<li><a href="#">People talking about their families Possessive ’s</a></li>
       			<li><a href="#">Describing a family tree</a></li>
-      			<li><a href="#">Interviewing a friend</a></li>
-      			<li><a href="#">A paragraph about your family</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
@@ -84,8 +74,6 @@
       			<li><a href="#">Jobs </a></li>
       			<li><a href="#">Information to complete a form Intonation in questions</a></li>
       			<li><a href="#">An email describing a family photo</a></li>
-      			<li><a href="#">Asking questions to identify a famous Colombian</a></li>
-      			<li><a href="#">A text about a famous person</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
@@ -95,8 +83,6 @@
                 <li><a href="#">a and an this/these and that/those</a></li>
       			<li><a href="#">Sports, subjects andclassroom objects Days of the week</a></li>
       			<li><a href="#">Discussing schoolsubjects</a></li>
-      			<li><a href="#">Reading a jumbled letter</a></li>
-     			<li><a href="#">Describing a classroom</a></li>
       			<li><a href="#">A letter</a></li>
                 <li class="divider"></li>
                   </ul></li>
@@ -108,8 +94,6 @@
       			<li><a href="#">Adjectives describing physical appearance</a></li>
      			<li><a href="#">Discussing physical characteristics Intonation in questions</a></li>
      			<li><a href="#">Descriptions of people</a></li>
-      			<li><a href="#">Describing a famous person</a></li>
-      			<li><a href="#">A job interview dialogue</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
