--- a/templates/registro-estudiante.html
+++ b/templates/registro-estudiante.html
@@ -52,19 +52,19 @@
             <div class="form-group">
               <h4>
                 <label for="exampleInputapellidos">Correo</label>
-                <input type = "text" name="apellidos" class="form-control" id="exampleInputapellidos" placeholder="Correo"></h4>
+                <input type = "text" name="email" class="form-control" id="exampleInputemail" placeholder="Correo"></h4>
             </div>
 
             <div class="form-group">
               <h4>
                 <label for="exampleInputapellidos">Documento Identidad</label>
-                <input type = "text" name="apellidos" class="form-control" id="exampleInputapellidos" placeholder="Documento"></h4>
+                <input type = "text" name="documento" class="form-control" id="exampleInputdocumento" placeholder="Documento"></h4>
             </div>
 
-            <div class="form-group">
+              <div class="form-group">
               <h4>
-                <label for="exampleInputEmail1">Usuario</label>
-                <input type="email" name = "email" class="form-control" id="exampleInputEmail1" placeholder="Email"></h4>
+                <label for="exampleInputapellidos">Username</label>
+                <input type = "text" name="username" class="form-control" id="exampleInputdocumento" placeholder="Documento"></h4>
             </div>
 
             <div class="form-group">
