--- a/templates/plantilla3.html
+++ b/templates/plantilla3.html
@@ -30,7 +30,7 @@
                   <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 2<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">...</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson2-tm1' %}">Listen</a></li>
                 <li><a href="#">...</a></li>
                 <li><a href="#">...</a></li>
                 <li><a href="#">...</a></li>
@@ -40,10 +40,10 @@
                   <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 3 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Full and contractedforms of to be: negative </a></li>
-                <li><a href="#">Countries and nationalities Colours </a></li>
-                <li><a href="#">Discussing nationalities/</a></li>
-                <li><a href="#">Students introducing themselves on a forum</a></li>
+                <li><a href="#">... </a></li>
+                <li><a href="#">... </a></li>
+                <li><a href="#">...</a></li>
+                <li><a href="#">...</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
