--- a/templates/registro-estudiante.html
+++ b/templates/registro-estudiante.html
@@ -58,7 +58,7 @@
             <div class="form-group">
               <h4>
                 <label for="exampleInputapellidos">Documento Identidad</label>
-                <input type = "text" name="documento" class="form-control" id="exampleInputdocumento" placeholder="Documento"></h4>
+                <input type = "text" name="cedula" class="form-control" id="exampleInputdocumento" placeholder="Documento"></h4>
             </div>
 
               <div class="form-group">
