--- a/templates/primer-modulo.html
+++ b/templates/primer-modulo.html
@@ -40,7 +40,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#">
+                            <a href="{% url 'primer-modulo-estudiantes' %}">
                                 <div class="panel-footer">
                                     <span class="pull-left">Ver</span>
                                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
